syntax = "proto3";

option csharp_namespace = "Harmony.Api.Protos";


message GetUsersForNotificationTypeRequest {
	repeated string users = 1;
	int32 type = 2;
}

message UserIsRegisterForNotificationRequest {
	string userId = 1;
	int32 type = 2;
}

message GetUsersForNotificationTypeResponse {
	repeated string users = 1;
}

message UserIsRegisterForNotificationResponse {
	bool isRegistered = 1;
}

service UserNotificationService {
  // returns a users registered for notification type
  rpc GetUsersForNotificationType (GetUsersForNotificationTypeRequest) 
	returns (GetUsersForNotificationTypeResponse);

  // checks if user is registered for notification type
  rpc UserIsRegisterForNotification (UserIsRegisterForNotificationRequest) 
	returns (UserIsRegisterForNotificationResponse);
}
